fix: add flex wrap for filter bar story

--- a/packages/select/docs/FilterMultiSelect.stories.scss
+++ b/packages/select/docs/FilterMultiSelect.stories.scss
@@ -13,6 +13,7 @@
   .filters {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: $spacing-xs;
   }
 }
